--- a/sytle.css
+++ b/sytle.css
@@ -17,3 +17,14 @@
     background-color: var(--cor-de-fundo);
     color: var(--branco);
 }
+
+span{
+    color: var(--verde);
+}
+
+.conteudo-principal{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
