--- a/sytle.css
+++ b/sytle.css
@@ -23,6 +23,7 @@ span{
     flex-direction: column;
     width: 100%;
     max-width: 1200px;
+    margin: 0 auto;
 }
 .titulo-principal{
     text-align: center;
@@ -45,4 +46,26 @@ span{
     border-bottom: 4px solid var(--botao-ativo);
     border-left: 2px solid var (--botao-ativo);
     border-right: 2px solid var (--botao-ativo);
+}
+.botoes{
+    display: block;
+}
+.botao:first-child{
+    border-radius: 20px 20px 0 0;
+}
+.botao:last-child{
+        border-radius: 0 0 20px 20px;
+}
+
+@media screen and (min-width: 700px) {
+    .botoes{
+        display: flex;
+    }
+    .botao:last-child{
+        border-radius: 0 20px 20px 0;
+    }
+    .botao:first-child{
+        border-radius: 20px 0 0 20px;
+    }
+
 }
