--- a/style.css
+++ b/style.css
@@ -65,9 +65,20 @@ span{
     display: block;
 }
 .abas-textos{
-    background-color: #1e1e1e;
+    background-color: var(--botao-inativo);
+    padding: 40px;
+    border-radius: 15px;
 }
-
+.aba-conteudo-titulo-principal{
+    font-size: 40px;
+    text-align: center;
+}
+.aba-conteudo-titulo-secundario{
+    text-align: center;
+    color: var(--verde);
+    text-transform: uppercase;
+    font-size: 20px
+}
 @media screen and (min-width: 700px){
     .botoes{
         display: flex;
