--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Chakra+Petch:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap');
 :root{
     /* nomedavariável: valor */
     --cor-de-fundo: #1e1e1e;
@@ -9,6 +10,7 @@
 }
 body{
     background-color: var(--cor-de-fundo);
+    font-family: 'Chakra Petch', sans-serif;
 }
 *{
     
@@ -53,6 +55,7 @@ span{
     border-bottom: 4px solid var(--botao-ativo);
     border-left: 2px solid var(--botao-ativo);
     border-right: 2px solid var (--botao-ativo);
+    font-family: 'Chakra Petch', sans-serif;
 }
 .botao.ativo{
     background-color: var(--botao-ativo);
