--- a/style.css
+++ b/style.css
@@ -1,85 +1,84 @@
+@import url('https://fonts.googleapis.com/css2?family=Chakra+Petch:wght@400;700&display=swap');
+/* 1) guardar numa variavel conteudo todos as
+classes aba-conteudo
+2) tirar todos os ativos com classList.remove
+3) adicionar ativo ao conteúdo selecionado com
+classList.add */
 :root{
-    /* nomedavariável: valor */
     --cor-de-fundo: #1e1e1e;
     --verde: #6FFF57;
     --branco: #FFFFFF;
-    --botao-ativo: #3A3753;
+    --botao-ativo: #3A375E;
     --botao-inativo: rgba(58,55,94,0.5);
     --texto-fundo: rgba(58,55,94,0.3);
 }
 body{
     background-color: var(--cor-de-fundo);
+    font-family: 'Chakra Petch', sans-serif;
 }
 *{
-    
     color: var(--branco);
 }
-
 span{
- color: var(--branco);
+    color: var(--verde);
 }
-
 .conteudo-principal{
     display: flex;
-    flex-direction: column;
     justify-content: center;
     align-items: center;
-    max-width: 1200px;
-    width: 100%;
-}
-.conteudo-principal{
-    display: flex;
-    justify-content: center;
-    align-content: center;
     flex-direction: column;
     width: 100%;
     max-width: 1200px;
-    margin: 0 auto;
 }
+
 .titulo-principal{
     text-align: center;
     width: 100%;
     font-size: 32px;
 }
 .botao{
-    background-color: var(--botao-inativo);
+    background-color: var(--botao-inativo); /* Define a cor de fundo */
     color: white;
+    /* Define a cor da fonte */
     display: flex;
     justify-content: center;
     align-items: center;
+    /* Definem a forma de exibição */
     padding: 1em;
+    /* Afastamento interno */
     font-size: 18px;
+    /* Muda o tamanho da fonte */
     width: 100%;
     border-bottom: 4px solid var(--botao-ativo);
     border-left: 2px solid var(--botao-ativo);
-    border-right: 2px solid var (--botao-ativo);
+    border-right: 2px solid var(--botao-ativo);
+    font-family: 'Chakra Petch', sans-serif;
 }
-.botao.ativo{
+ .botao.ativo{
     background-color: var(--botao-ativo);
     border-bottom: 4px solid var(--verde);
-}
-.aba-conteudo{
+ }
+ .aba-conteudo{
     display: none;
-}
-.aba-conteudo.ativo{
+ }
+ .aba-conteudo.ativo{
     display: block;
-}
-.abas-textos{
+ }
+ .abas-textos{
     background-color: var(--botao-inativo);
     padding: 40px;
     border-radius: 15px;
-}
-.aba-conteudo-titulo-principal{
-    font-size: 40px;
-    text-align: center;
-}
-.aba-conteudo-titulo-secundario{
-    text-align: center;
-    color: var(--verde);
-    text-transform: uppercase;
-    font-size: 20px
-}
-@media screen and (min-width: 700px){
+ }
+ .aba-conteudo-titulo-principal{
+     font-size: 30px;
+     text-align: center;
+ }
+ .aba-conteudo-titulo-secundario{
+     text-align: center;
+     color: var(--verde);
+     text-transform: uppercase;
+ }
+@media screen and  (min-width: 700px){
     .botoes{
         display: flex;
     }
